# XpubShield

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: HANDOFF.md  PRODUCT_PLAN.md  PRODUCT_STRATEGY.md  RELEASE_READINESS.md  TRACEABILITY.md
fixtures/: mock_psbt_phase3.json  mock_wallet_phase1.json
src/: App.tsx  cockpit.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fixtures/: provenance_registry.json  psbt_cases.json  wallet_shapes.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: action_engine.rs  address_derivation.rs  alert_engine.rs  audit_engine.rs  bitcoin_core_backend.rs  blockchain_backend.rs  consolidation_planner.rs  database.rs  descriptor_diff.rs  descriptor_parser.rs  electrum_backend.rs  esplora_backend.rs  fee_estimator.rs  graph_builder.rs  lib.rs  main.rs  mock_backend.rs  models.rs  privacy_simulator.rs  provenance_engine.rs  psbt_linter.rs  recovery_report.rs  tauri_commands.rs  wallet_import.rs
src/api/: tauri.ts
src/components/: BrandMark.tsx  EvidenceDrawer.tsx  MetricCard.tsx  MissionQueue.tsx  PrivacyWarning.tsx  RiskBadge.tsx  SovereignOpsTutorial.tsx  StatusPill.tsx  WarningDialog.tsx  WorkflowGuide.tsx
src/lib/: format.ts  networkPolicy.ts  ops.ts  phase2.ts  phase3.ts  setupPreferences.ts  workspace.ts
src/pages/: Alerts.tsx  Cockpit.tsx  ConsolidationPlanner.tsx  Dashboard.tsx  DescriptorDiff.tsx  Documentation.tsx  FeeStressTest.tsx  GraphView.tsx  OnboardingImport.tsx  PrivacySimulator.tsx  (+6 more)
(+9 files in other folders)
