[package]
name = "xpubshield"
version = "0.1.2"
description = "Local-first watch-only Bitcoin xpub and UTXO observability desktop app"
authors = ["XpubShield"]
edition = "2021"

[lib]
name = "xpubshield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "xpubshield"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
miniscript = "13"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1", features = [] }
thiserror = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
